--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.6",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
